unpackaged/main/default/objects/UTM_Profile__c/UTM_Profile__c.object-meta.xml
<CustomObject>
    <description>Child object to Lender Profile. Contains values for UTM params that should be checked for matches along with the rest of Lender Profile configurations.</description>
    <label>UTM Profile</label>
    <nameField>
        <displayFormat>UTM-Profile-{000000}</displayFormat>
        <label>UTM Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UTM Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>