unpackaged/main/default/objects/UTM_Profile__c/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <label>UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>