unpackaged/main/default/objects/UTM_Profile__c/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>